# omnidirectional_camera

./: CMakeLists.txt  Makefile  README.md
data/: image_list.txt  img_para_001.pgm  img_para_002.pgm  img_para_003.pgm  img_para_004.pgm  img_para_005.pgm  img_para_006.pgm  img_para_007.pgm  img_para_008.pgm  img_para_009.pgm  img_para_010.pgm  param_config.json
src/: AppUtility.hpp  CalibrationApp.cpp  CalibrationHandler.cpp  CalibrationHandler.hpp  ParamConfig.hpp  UndistortionApp.cpp
